# api-model-python

./: .gitgnore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  env.env  help.py  local.env  locustfile.py  pyproject.toml  requirements.txt  run-local.sh
config/: otel.yaml
config/caddy/: Caddyfile
config/grafana/: dashboards.yaml  datasource.yml
config/grafana/dashboards/: fast_api.json
config/prometheus/: prometheus.yml
config/tempo/: tempo.yaml
src/: debug_main.py  fastapi_app.py  gunicorn.conf.py  gunicorn_config.py  main.py  settings.py  tracing.py
src/application/book/: book_error.py  book_service.py
src/application/crypt/: crypt_service.py
src/application/crypt/keys/: private_key.pem  public_key.pem
src/application/errors/: application_error.py
src/application/log/: log_service.py
src/application/token/: token_error.py  token_service.py
src/application/user/: user_error.py  user_service.py
src/data/db_orm/: connection.py  populate_db.py  query_obj.py  run_migration.py
src/data/db_orm/alembic/versions/: 3e3244da8508_.py  41147f3f8caf_.py
src/data/db_orm/tables/: __init__.py  base.py  tbl_books.py  tbl_logs.py  tbl_users.py
src/data/db_raw/: db_utils.py
src/data/dtos/: books_dto.py  tbl_base.py  users_dto.py
src/data/errors/: repository_error.py
src/data/redis/: client.py  decorators.py  redis_utils.py
src/data/repository/: books_repository.py  logs_repository.py  tokens_repository.py  users_repository.py
src/domain/: book.py  user.py
src/endpoints/book/: book.py
src/endpoints/healthcheck/: healthcheck.py
src/infrastructure/database/: connection.py  init_db.py  query_obj.py
src/infrastructure/database/tables/: books.py  logs.py  models.py
src/infrastructure/db_orm/: connection.py  init_database.py  init_db.py  populate_db.py  query_obj.py  run_migration.py
src/infrastructure/db_orm/alembic/: env.py
src/infrastructure/db_orm/alembic/versions/: 41147f3f8caf_.py
src/infrastructure/db_orm/tables/: tbl_books.py  tbl_logs.py  tbl_users.py
src/infrastructure/db_raw/: db_utils.py
src/infrastructure/dtos/: books_dto.py  tbl_books_dto.py  tbl_users_dto.py  users_dto.py
src/infrastructure/errors/: repository_error.py  sql_error.py
src/infrastructure/redis/: client.py  decorators.py  redis_utils.py
src/infrastructure/repository/: books_repository.py  logs_repository.py  redis_repository.py  tokens_repository.py  users_repository.py
src/presentation/endpoints/: home.py
src/presentation/endpoints/book/: book.py
src/presentation/endpoints/books/: books.py
src/presentation/endpoints/health_check/: health_check.py
src/presentation/endpoints/healthcheck/: healthcheck.py
src/presentation/endpoints/token/: token.py
src/presentation/endpoints/user/: user.py
src/presentation/schemas/: book_schema.py  token.py  user_schema.py
src/templates/: base.html  dashboard.html  home.html  login.html
tests/tests_presentation/tests_endpoints/: conftest.py  test_book.py  test_healthcheck.py  test_token.py  test_user.py
