[tool.poetry]
name = "api-library"
version = "0.1.0"
description = ""
authors = ["Jorge Vasconcelos <jorge.r.p.v@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "*"
uvicorn = "*"
python-dotenv = "*"
SQLAlchemy = "*"
SQLAlchemy-serializer = "*"
mysql-connector-python = "*"
python-multipart = "*"
pycryptodome = "*"
redis = "*"
alembic = "*"
opentelemetry-instrumentation-fastapi = "*"
opentelemetry-sdk = "*"
opentelemetry-exporter-otlp-proto-grpc = "*"

[tool.poetry.group.dev.dependencies]
Faker = "*"
pytest = "*"
httpx = "*"
ruff = "*"


[tool.ruff]
line-length = 120
target-version = "py311"

select = [
    "B", # flake8-bugbear
    "BLE", # flake8-blind-except
    "C4", # comprehensions
    "D", # pydocstyle
    "E", # pycodestyle
    "F", # pyflakes
    "I", # isort
    "ICN", # flake8-import-conventions
    "ISC", # flake8-implicit-str-concat
    "PGH", # pygrep-hooks
    "PLC", # pylint
    "PLE", # pylint
    "PLR", # pylint import style
    "PLW", # pylint
    "RET", # flake8-return
    "RUF", # ruff-specific rules
    "SIM", # flake8-simplify
    "T10", # flake8-debugger
    "T20", # flake8-print
    "TID", # flake8-tidy-imports
    "UP", # pyupgrade
    "W", # pycodestyle
    "YTT", # flake8-2020

]
ignore = [
    "D100", # public module
    "D101", # public class
    "D102", # public method
    "D103", # public function
    "D104", # public package
    "D105", # magic methods
]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "I"]
unfixable = []

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
